--- a/.github/workflows/auto-add-project.yml
+++ b/.github/workflows/auto-add-project.yml
@@ -8,6 +8,7 @@ on:
 
 permissions:
   issues: write
+  project: write
 
 jobs:
   add-to-project:
@@ -21,23 +22,21 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const projectName = "PiglioTech";
-            const { context } = require("@actions/github");
 
             // Get all projects for the repository
-            const projects = await octokit.rest.projects.listForRepo({
+            const projects = await github.rest.projects.listForRepo({
               owner: context.repo.owner,
               repo: context.repo.repo,
             });
 
             // Find the desired project by name
             const project = projects.data.find(p => p.name === projectName);
-
             if (!project) {
               throw new Error(`Project '${projectName}' not found.`);
             }
 
             // Get the columns of the project
-            const columns = await octokit.rest.projects.listColumns({
+            const columns = await github.rest.projects.listColumns({
               project_id: project.id,
             });
 
@@ -46,7 +45,7 @@ jobs:
             }
 
             // Check if the issue is already in the project
-            const cards = await octokit.rest.projects.listCards({
+            const cards = await github.rest.projects.listCards({
               column_id: columns.data[0].id,
             });
 
@@ -54,12 +53,11 @@ jobs:
 
             if (!isAlreadyInProject) {
               // Add the issue to the first column of the project
-              await octokit.rest.projects.createCard({
+              await github.rest.projects.createCard({
                 column_id: columns.data[0].id,
                 content_id: context.payload.issue.id,
                 content_type: "Issue",
               });
-
               console.log(`Issue added to project: ${projectName}`);
             } else {
               console.log("Issue is already assigned to the project.");
