--- a/.github/workflows/auto-add-project.yml
+++ b/.github/workflows/auto-add-project.yml
@@ -14,49 +14,41 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Add the issue to a classic project
-      - name: Add issue to project
+      - name: Add issue to v2 project
         uses: actions/github-script@v6
         with:
-          github-token: ${{ secrets.PROJECTS_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const projectName = "PiglioTech";
-            // Get all projects for the repository
-            const projects = await github.rest.projects.listForRepo({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
+            const projectNumber = 1; // Replace with your project number
+            const orgName = "jv-kune-kune"; // Replace with your organization name
+
+            // Find the project using the GraphQL API
+            const projectQuery = `
+              query {
+                organization(login: "${orgName}") {
+                  projectV2(number: ${projectNumber}) {
+                    id
+                    title
+                  }
+                }
+              }
+            `;
+            const projectResponse = await github.graphql(projectQuery);
+            const projectId = projectResponse.organization.projectV2.id;
+
+            // Add the issue to the project
+            const addItemMutation = `
+              mutation($projectId: ID!, $contentId: ID!) {
+                addProjectV2ItemById(input: {projectId: $projectId, contentId: $contentId}) {
+                  item {
+                    id
+                  }
+                }
+              }
+            `;
+            await github.graphql(addItemMutation, {
+              projectId: projectId,
+              contentId: context.payload.issue.node_id,
             });
 
-            // Find the desired project by name
-            const project = projects.data.find(p => p.name === projectName);
-            if (!project) {
-              throw new Error(`Project '${projectName}' not found.`);
-            }
-
-            // Get the columns of the project
-            const columns = await github.rest.projects.listColumns({
-              project_id: project.id,
-            });
-
-            if (columns.data.length === 0) {
-              throw new Error(`Project '${projectName}' has no columns.`);
-            }
-
-            // Check if the issue is already in the project
-            const cards = await github.rest.projects.listCards({
-              column_id: columns.data[0].id,
-            });
-
-            const isAlreadyInProject = cards.data.some(card => card.content_url === context.payload.issue.url);
-
-            if (!isAlreadyInProject) {
-              // Add the issue to the first column of the project
-              await github.rest.projects.createCard({
-                column_id: columns.data[0].id,
-                content_id: context.payload.issue.id,
-                content_type: "Issue",
-              });
-              console.log(`Issue added to project: ${projectName}`);
-            } else {
-              console.log("Issue is already assigned to the project.");
-            }
+            console.log(`Issue successfully added to project: ${projectResponse.organization.projectV2.title}`);
